# couchdb-simple

./: LICENSE  README.md  SimpleCouch.cabal  SimpleCouchDB.cabal  couchdb-simple.cabal
Database/: SimpleCouch.hs  SimpleCouchDB.hs
Database/CouchDB/: Simple.hs
