name:                SimpleCouch
version:             0.0.1
synopsis:            A simple CouchDB library for Haskell.
description:         A simple CouchDB library for Haskell. It is a thin layer on top of CouchDB's HTTP API.
homepage:            https://github.com/adrienhaxaire/simple-couch
license:             BSD3
license-file:        LICENSE
author:              Adrien Haxaire
maintainer:          adrien@haxaire.org
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Database.SimpleCouch
  build-depends:       base ==4.5.*, HTTP ==4000.2.*, network ==2.3.*, parsec ==3.1.*
  